<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shivam.chatapp.activities.ProfileActivity">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/default_avatar"
       android:background="#e0e0e0"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_image"
        android:orientation="vertical"
        android:background="#4e4b4b">
    <TextView
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/profile_display_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

        <TextView
            android:id="@+id/profile_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_user_status"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/profile_totalFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_friends"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/profile_sendReqBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/send_friend_request"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/profile_decline_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/decline_friend_request"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>