<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shivam.chatapp.activities.RegisterActivity">


    <include layout="@layout/app_bar_layout"
             android:id="@+id/register_toolbar"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="35dp"
        android:text="@string/create_a_new_account"
        android:layout_marginLeft="18dp"
        android:textSize="25sp"
        tools:ignore="RtlHardcoded" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="50dp">
        <EditText
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/reg_display_name"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/reg_display_name"
            android:layout_marginTop="13dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp">
           <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/reg_email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/reg_crete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/reg_password"
        android:layout_marginEnd="30dp"
        android:background="@color/colorAccent"
        android:text="@string/create_account"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</RelativeLayout>
